--- a/CodeUnion.CodeGenerator/App.config
+++ b/CodeUnion.CodeGenerator/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="hgyclicklog" connectionString="Data Source=hgyclicklog.sqlite;Version=3;" providerName="hgyclicklog" />
+    <add name="SQLiteConnectionString" connectionString="Data Source=hgyclicklog.sqlite;Version=3;" providerName="SQLiteProvider" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v2.0.50727"/>
